# aruco_extrinsic

./: CMakeLists.txt  README.md  package.xml
include/: ArucoBoardDetector.hpp  Conversions.hpp  Exceptions.hpp  to_string.hpp
launch/: test.launch
msg/: ArucoMarker.msg  ArucoMarkers.msg
src/: ArucoBoardDetector.cpp  Conversions.cpp  aruco_extrinsic.cpp
